data/derived/sp14/progs/unify/prog2070.ml.out
Characters 59-66:
  | _ -> x::clone (x n-1);;
                  ^^^^^^^
Error: This expression has type int but an expression was expected of type
         int -> int
